--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,244 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wrapper {
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+.btn-box {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media(max-width:450px){
+    .btn-box{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.navbar{
+    width: 100%;
+    padding: 24%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f6f6f6;
+}
+
+@media(max-width:450px){
+    .navbar{
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+.navbar .leftside{
+    width: 150px;
+    height: auto;
+      
+} 
+
+.navbar .leftside img{
+    width: 100%;
+    height: 100%;
+    margin-left: 400px;
+    /* width: 150px;
+    height: auto;
+    max-width: 100%; */
+}
+
+.navbar .rightside{
+    display: flex;
+    font-weight:bold;
+    font-size: 18px;
+    margin-left: 24px;
+    align-items: center;
+    margin-right: 30px;
+}
+
+@media(max-width:450px){
+    .navbar .rightside{
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 20px;
+        margin-right: 0px;
+    }
+}
+
+
+.link{
+    text-decoration: none;
+}
+
+.success{
+    width: 100%;
+    padding: 14px;
+    background-color: #dff0d8;
+    color: #468847;
+}
+
+.navbar .rightside div{
+    margin: 0px 10px;
+}
+
+@media(max-width:450px){
+    .navbar .rightside div{
+        margin: 10px 0px;
+    }
+}
+
+.navbar .rightside div .navlink{
+    text-decoration: none;
+    /* color: #000; */
+    color: #ab3550
+}
+
+.error{
+    width: 100%;
+    padding: 14px;
+    background-color: #dff0d8;
+    color: #df786f;
+}
+
+.products-box{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 50px;
+}
+
+.product{
+    width: 350px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+    margin-right: 24px;
+    transition: all 0.3s ease-in-out;
+    padding: 12px;
+    border-radius: 10px;
+}
+
+.product:hover{
+    box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.3);
+}
+
+@media(min-width: 768px){
+    .product{
+        width: 300px;
+    }
+}
+
+.product .product-img{
+    width: 180px;
+    height: 215px;
+}
+
+.product .product-img img{
+    width: 100%;
+    height: 100%;
+}
+
+.product .product-text{
+    margin-bottom: 10px;
+    font-size: 16px;
+    text-align: center;
+}
+
+.product .product-text.title{
+    color: #e00a02;
+    font-weight: 600;
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+.product .product-text.description{
+    height: 50px;
+    overflow: hidden;
+}
+
+.product .product-text.price{
+    font-weight: 600;
+}
+
+.product .product-text.cart-price{
+    font-weight: 600;
+    color: #e00a02;
+}
+
+
+.cart-btn{
+    background-color: #e00a02 !important;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .cart-menu-btn{
+    position: relative;  
   }
-  to {
-    transform: rotate(360deg);
+  
+  .cart-menu-btn .cart-indicator{
+    width: 18px;
+    background-color: #e00a02;
+    padding: 3px;
+    border-radius: 3px;
+    color: #fff;
+    font-size: 11px;
+    font-weight: 600;
+    position: absolute;
+    top: -17px;
+    right: -15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-}
+  
+  .product .quantity-box{
+    width: 100%;  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 600;
+    padding: 5px;
+    border: 1px solid #b9b5b5;
+    border-radius: 8px;
+  }
+  
+  .product .quantity-box .action-btns{
+    font-weight: 600;
+    cursor: pointer;
+  }
+  
+  /* summary box */
+  .summary-box{
+    width: 300px;
+    margin: 30px auto;
+    border: 1px solid #b9b5b5;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+  }
+  
+  .summary-box h5{
+    display: flex;  
+    border-bottom: 1px solid #e00a02;
+    text-align: center;
+    padding: 0px;
+  }
+  
+  .summary-box div{
+    display: flex;
+    justify-content: space-between;
+  }
